fix image on safari

--- a/_sass/pages/_homepage.scss
+++ b/_sass/pages/_homepage.scss
@@ -31,6 +31,7 @@
   display: block;
   position: relative;
   width: 90%;
+
   &.ctr-lighter {
     &>.indicator::after {
       color: $alchemist-gray-400;
@@ -114,8 +115,6 @@
       z-index: 999;
       text-align: left;
       font-weight: 300;
-
-
     }
 
     &.error {
@@ -996,11 +995,14 @@
       .box-img {
         width: 130px;
         height: 130px;
+
         img {
-          width: 100px;
+          width: 90px;
+          height: 100px;
 
           @include media-breakpoint-down(md) {
             width: 80px;
+            height: 90px;
           }
         }
 
